# asset-insight-graph

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_IMPROVEMENTS.md  DATA_ACCURACY.md  Makefile  README.md  SETUP.md  docker-compose.yml  example_queries.yml  pyproject.toml  requirements.txt  streamlit_app.py  ui_config.json  vector_search_demo.py
.github/workflows/: ci.yml
.streamlit/: config.toml
api/: __init__.py  config.py  db.py  graphrag.py  main.py  multi_agent.py  text2cypher.py
api/asset_queries/: schema.py
api/geospatial_tools/: cypher_statements.py
api/prompts/: cypher_template.txt
docker/: api.Dockerfile
docs/: data_sources.md  generate_diagram.py  graph_model_enhancements.md
docs/workflows/: asset_insight_architecture.mmd
etl/: __init__.py  cim_assets.jsonl  cim_assets_descriptions.jsonl  cim_assets_enhanced.jsonl  cim_assets_factual.jsonl  cim_assets_scrape.py  cim_loader.py  cleanup_database.py  database_reset.py  descriptions.py  enhanced_loader.py  fred_loader.py  gds_analysis.py  load_cim_dataset.py  load_sample_dataset.py  property_descriptions.py  schema.cypher  vector_loader.py  verify_knowledge_graph.py
etl/data/: sample_assets.csv
tests/: test_api.py  test_etl.py  test_health.py  test_qa.py  test_ui_queries.py
